# mcre

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  scripts.nix
.cargo/: config.toml
.github/workflows/: bump.yml  ci.yml
crates/core_io/: Cargo.toml
crates/core_io/src/: lib.rs
crates/mcje/: Cargo.toml  build.rs
crates/mcje/src/: lib.rs
crates/mcje_downloader/: Cargo.toml  README.md
crates/mcje_downloader/src/: lib.rs
crates/mcre/: Cargo.toml
crates/mcre/src/: camera.rs  chunk.rs  main.rs  player.rs  textures.rs
crates/mcre/src/chunk/: asset.rs  generate.rs  loader.rs  mesh.rs  mod.rs
crates/mcre/src/interaction/: block_breaking.rs  mod.rs  raycasting.rs
crates/mcre/src/ui/: load.rs  mod.rs  player.rs
crates/mcre/src/utils/: sparse.rs
crates/mcre_assest/: Cargo.toml
crates/mcre_assest/src/: blockstates.rs
crates/mcre_assets/: Cargo.toml  build.rs
crates/mcre_assets/src/: blockstates.rs  id.rs  lib.rs
crates/mcre_core/src/: axis.rs  blockpos.rs  lib.rs  random_offset.rs  state.rs  vec.rs
crates/mcre_data/: blocks.json
crates/mcre_data/src/: block.rs  state.rs
crates/mcre_static_data/: Cargo.toml
crates/mcre_static_data/src/: lib.rs
crates/mcre_world/: Cargo.toml
crates/mcre_world/src/: lib.rs
docs/: world-model.md
tasks/core_gen/: Cargo.toml
tasks/core_gen/src/: analyzer.rs
tasks/data_generator/: Cargo.toml
tasks/data_generator/src/: main.rs
tasks/static_data_generator/: Cargo.toml
tasks/static_data_generator/src/: main.rs
tasks/world_data_gen/: Cargo.toml
tasks/world_data_gen/src/: main.rs
(+307 files in other folders)
