[package]
name = "mcje_downloader"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes        = { workspace = true }
chrono       = { workspace = true }
futures-core = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
url          = { workspace = true }
